# quant-execution-risk-platform

./: .gitignore  README.md  compose.yml  render.yaml
.github/workflows/: ci.yml
docs/: README.md  Repository Deep Analysis  ai-handover-analysis.md  erd-draft.md  mvp.md  system-architecture.md
docs/adr/: 001-outbox.md  002-no-short-selling.md  003-research-artifacts.md
docs/deploy/: render-supabase-free.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  providers.tsx  router.tsx
frontend/src/components/: AssetSummaryCard.tsx  Badge.module.css  Badge.test.tsx  Badge.tsx  BottomTabBar.tsx  DataTable.tsx  HoldingRow.tsx  InlineAuthPanel.tsx  InsightCard.tsx  ModeToggle.test.tsx  ModeToggle.tsx  OrderTicket.tsx  QuoteHero.tsx  SectionCard.module.css  SectionCard.tsx  ShellLayout.module.css  ShellLayout.tsx  SignalStrengthBar.tsx
frontend/src/lib/: format.ts  orders.test.ts  orders.ts
frontend/src/pages/: ArchitecturePage.tsx  DiscoverPage.tsx  HomePage.tsx  LandingPage.tsx  OrdersPage.tsx  PortfolioPage.tsx  (+7 more)
infra/prometheus/: prometheus.yml
java-service/: Dockerfile  build.gradle
python-research/: pyproject.toml
python-research/artifacts/demo-sample/: equity_curve.csv  equity_curve.html  report.json  signals.csv  trades.csv
python-research/configs/: demo_strategy.yaml
python-research/src/qerp_research/: __init__.py  artifacts.py  backtest.py  config.py  data.py  metrics.py  run_backtest.py  strategy.py
python-research/tests/: test_backtest.py  test_metrics.py
(+160 files in other folders)
